[SC-10257] fixed overlapping of user menu on bank-pass header

--- a/src/bank-code/products/bank-pass/bank-pass.component.less
+++ b/src/bank-code/products/bank-pass/bank-pass.component.less
@@ -311,7 +311,7 @@
         padding-left: 443px;
         justify-content: space-between;
         flex-wrap: wrap;
-        z-index: 2;
+        z-index: 1;
         .search {
             width: 263px;
             /deep/ .dx-textbox {
